Fixed viewport, broken css and edit README files

--- a/style.css
+++ b/style.css
@@ -133,10 +133,3 @@ footer {
 footer h2 {
     font-size: 20px;
 }
-
-
-@media only screen and (max-width: 600px) {
-    body {
-        width: 100%;
-    }
-}
